--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -57,7 +57,7 @@
                 <h3 class="h3">Sinopsis</h3>
                 <p class="p">Bella es una joven brillante e independiente que decide entregarse como prisionera a una despiadada bestia a cambio de que esta libere a su padre.<br>A pesar de sus temores, Bella se hace amiga del hechizado servicio del castillo, aprende a ver más allá del espantoso físico de la Bestia y descubre que tiene el bondadoso corazón de un auténtico príncipe.</p>
                 <a href="generos.html" target="_blank" class="h3">Género</a><br><br>
-                <a href="detalle-accion.html" class="p">Acción</a><br><br>
+                <a href="detalle-genero.html" class="p">Acción</a><br><br>
             </article>
 
         </section>
