--- a/generos.html
+++ b/generos.html
@@ -47,21 +47,21 @@
 
         <h2 class="h2-generos">PELÍCULAS</h2>
         <ul>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Acción</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Romance</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Musical</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Infantil</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Comedia</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Acción</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Romance</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Musical</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Infantil</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Comedia</li></a>
 
         </ul>
 
         <h2 class="h2-generos">SERIES</h2>
         <ul>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Acción</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Drama</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Musical</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Ciencia ficción</li></a>
-            <a href="detalle-accion.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Comedia</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Acción</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Drama</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Musical</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Ciencia ficción</li></a>
+            <a href="detalle-genero.html" target="_blank"><li class="li"><i class="fa-solid fa-play" style="color: #ffffff;"></i> Comedia</li></a>
 
         </ul>
 
