--- a/favoritos.html
+++ b/favoritos.html
@@ -46,8 +46,8 @@
         <section class="portada-sec">
 
             <article class="portada">
-                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/oppenheimer.jpg" alt=""></a>
-                <h2>Oppenheimer</h2>
+                <a href="detalle-pelicula.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/películas-populares/barbie.jpg" alt=""></a>
+                <h2>Barbie</h2>
             </article>
 
         </section>
@@ -56,8 +56,8 @@
         <section class="portada-sec">
 
             <article class="portada">
-                <a href="detalle-serie.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/lcdp.jpg" alt=""></a>
-                <h2>La casa de papel</h2>
+                <a href="detalle-serie.html" target="_blank"> <img class="portada-img" src="../pi-grupo1-trezeguet-scallan/img/series-populares/gossip.jpg" alt=""></a>
+                <h2>Gossip Girl</h2>
             </article>
 
         </section>
