target blanks añadidos

--- a/favoritos.html
+++ b/favoritos.html
@@ -19,8 +19,8 @@
         <div class="navbar">
             <ul class="ulnavbar">
                 <li class="navbar-text">
-                    <a class="navbar-items" href="./index.html">HOME</a>
-                    <a class="navbar-items" href="./generos.html">GÉNEROS</a>
+                    <a class="navbar-items" href="./index.html" target="_blank">HOME</a>
+                    <a class="navbar-items" href="./generos.html" target="_blank">GÉNEROS</a>
                     <a class="navbar-items" href="./favoritos.html">FAVORITOS</a>
                 </li>
             </ul>
