--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -18,7 +18,7 @@
         <div class="navbar">
             <ul class="ulnavbar">
                 <li class="navbar-text">
-                    <a class="navbar-items" href="./index.html">HOME</a>
+                    <a class="navbar-items" href="./index.html" target="_blank">HOME</a>
                     <a class="navbar-items" href="./generos.html" target="_blank">GÉNEROS</a>
                     <a class="navbar-items" href="./favoritos.html" target="_blank">FAVORITOS</a>
                 </li>
