--- a/generos.html
+++ b/generos.html
@@ -21,9 +21,9 @@
         <div class="navbar">
             <ul class="ulnavbar">
                 <li class="navbar-text">
-                    <a class="navbar-items" href="./index.html">HOME</a>
+                    <a class="navbar-items" href="./index.html" target="_blank">HOME</a>
                     <a class="navbar-items" href="./generos.html">GÉNEROS</a>
-                    <a class="navbar-items" href="./favoritos.html">FAVORITOS</a>
+                    <a class="navbar-items" href="./favoritos.html" target="_blank">FAVORITOS</a>
                 </li>
             </ul>
         </div>
